V 1.2.0: Added new database manager api, new feature --force-id to force tvdb lookup of force-show to id

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,12 @@
 [options]
-
+log_dir: /home/gom/log/spiderbro
 tv_dir: /media/twoTB1/videos/tv/
-scan_all_shows_xbmc: False
+scan_all_shows_xbmc: True
 force_learn: False
-shows_file: /home/gom/.autotorrent/showlist.txt
+shows_file: showlist.txt
+xbmc_sqlite_db: test.db
+use_mysql: True
+host: localhost
+user: xbmc
+passw: xbmc
+schema: xbmc_video
