small updates, log message changes

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 [options]
+sb_db_file: /home/gom/code/python/spider_bro/spiderbro.db
 log_dir: /home/gom/log/spiderbro
 tv_dir: /media/twoTB1/videos/tv/
 scan_all_shows_xbmc: True
