no checkins for a year, sanity checkin

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [options]
 sb_db_file: /home/gom/code/python/spider_bro/spiderbro.db
 log_dir: /home/gom/log/spiderbro
-tv_dir: /media/twoTB1/videos/tv/
+tv_dir: /media/tv2/
 scan_all_shows_xbmc: True
 force_learn: False
 shows_file: showlist.txt
@@ -10,4 +10,4 @@ use_mysql: True
 host: localhost
 user: xbmc
 passw: xbmc
-schema: xbmc_video
+schema: xbmc_video60
