Added a script for deluge to execute when a torrent has completed and added a new option to the main spiderbro logic; it will attempt to rename files in a sane way in the specifed tv directory

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [options]
 sb_db_file: /home/gom/code/python/spider_bro/spiderbro.db
 log_dir: /home/gom/log/spiderbro
-tv_dir: /media/tv2/
+tv_dir: /media/tv2/.torrents_temp/
 scan_all_shows_xbmc: True
 force_learn: False
 shows_file: showlist.txt
@@ -11,3 +11,4 @@ host: localhost
 user: xbmc
 passw: xbmc
 schema: xbmc_video60
+use_filerenamer: True
