--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,14 @@
-[options]
-sb_db_file: /home/gom/code/python/spider_bro/spiderbro.db
-log_dir: /home/gom/log/spiderbro
-tv_dir: /media/tv2/.torrents_temp/
-scan_all_shows_xbmc: True
+[spiderbro]
+db_file: /home/gom/code/python/spider_bro/spiderbro.db
 force_learn: False
+log_dir: /home/gom/log/spiderbro
+scan_all_shows_xbmc: True
 shows_file: showlist.txt
+tv_dir: /media/tv2/.torrents_temp/
 xbmc_sqlite_db: test.db
-use_mysql: True
+filerenamer: True
+mysql: True
 host: localhost
 user: xbmc
-passw: xbmc
+pwd: xbmc
 schema: xbmc_video60
-use_filerenamer: True
