Changed pb proxy. TODO: need a list of proxies, maybe some function that tries multiple ones in the event of one being down

--- a/config.ini
+++ b/config.ini
@@ -4,11 +4,11 @@ force_learn: False
 log_dir: /home/gom/log/spiderbro
 scan_all_shows_xbmc: True
 shows_file: showlist.txt
-tv_dir: /media/tv2/.torrents_temp/
+tv_dir: /media/nasGom/.torrents_temp/
 xbmc_sqlite_db: test.db
 filerenamer: True
 mysql: True
 host: localhost
 user: xbmc
 pwd: xbmc
-schema: xbmc_video60
+schema: MyVideos75
